# libgedit-amtk

./: CMakeLists.txt  README.md  amtk-config.h.in  libgedit-amtk.doap  meson.build
amtk/: CMakeLists.txt  amtk-enum-types.c.in  amtk-enum-types.h.in
cmake/: gsw.cmake  pkg-config-template.pc.in
docs/: more-information.md
